working on passing the test